<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/aboutMenuCalculator"
        android:title="@string/calculator"
        android:icon="@drawable/calculator_icon"
        android:iconTint="@color/customAccent"
        app:showAsAction="ifRoom"/>
    <item android:id="@+id/aboutMenuConverter"
        android:title="@string/converter"
        android:icon="@drawable/converter_icon"
        android:iconTint="@color/customAccent"
        app:showAsAction="ifRoom"/>
    <item android:id="@+id/aboutMenuRates"
        android:title="@string/rates"
        android:icon="@drawable/list_view_icon"
        android:iconTint="@color/customAccent"
        app:showAsAction="ifRoom"/>
</menu>
