<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/ratesMenuCalculator"
        android:title="@string/calculator"
        android:icon="@drawable/calculator_icon"
        android:iconTint="@color/customAccent"
        app:showAsAction="ifRoom"/>
    <item android:id="@+id/ratesMenuConverter"
        android:title="@string/converter"
        android:icon="@drawable/converter_icon"
        android:iconTint="@color/customAccent"
        app:showAsAction="ifRoom"/>
    <item android:id="@+id/ratesMenuAbout"
        android:title="@string/about"
        android:icon="@drawable/information_icon"
        android:iconTint="@color/customAccent"
        app:showAsAction="ifRoom"/>
</menu>
