<?xml version="1.0" encoding="utf-8"?>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/calculator_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".CalculatorActivity">

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="5"
            android:rowCount="6">

            <Button
                android:id="@+id/buttonPlusMinus"
                android:layout_width="95dp"
                android:layout_height="95dp"
                android:background="@drawable/btn_rounded_sm"
                android:text="@string/plus_minus"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="@color/customAccent"
                android:layout_row="0"
                android:layout_column="0"
                android:layout_margin="3dp">
            </Button>

            <Button
                android:id="@+id/buttonModulus"
                android:layout_width="95dp"
                android:layout_height="95dp"
                android:background="@drawable/btn_rounded_sm"
                android:text="@string/percent"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="@color/customAccent"
                android:layout_row="0"
                android:layout_column="1"
                android:layout_margin="3dp">
            </Button>

            <Button
                android:id="@+id/buttonMultiply"
                android:layout_width="95dp"
                android:layout_height="95dp"
                android:background="@drawable/btn_rounded_sm"
                android:text="@string/multiply"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="@color/customAccent"
                android:layout_row="0"
                android:layout_column="2"
                android:layout_margin="3dp">
            </Button>

            <Button
                android:id="@+id/buttonDelete"
                android:layout_width="95dp"
                android:layout_height="95dp"
                android:background="@drawable/btn_rounded_sm"
                android:backgroundTint="@android:color/black"
                android:text="@string/delete"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="@color/customAccent"
                android:layout_row="0"
                android:layout_column="3"
                android:layout_margin="3dp">
            </Button>

            <Button
                android:id="@+id/buttonSeven"
                android:layout_width="95dp"
                android:layout_height="95dp"
                android:background="@drawable/btn_rounded_sm"
                android:text="@string/seven"
                android:textColor="@color/customText"
                android:textSize="24sp"
                android:layout_row="1"
                android:layout_column="0"
                android:layout_margin="3dp">
            </Button>

            <Button
                android:id="@+id/buttonEight"
                android:layout_width="95dp"
                android:layout_height="95dp"
                android:background="@drawable/btn_rounded_sm"
                android:text="@string/eight"
                android:textSize="24sp"
                android:textColor="@color/customText"
                android:layout_row="1"
                android:layout_column="1"
                android:layout_margin="3dp">
            </Button>

            <Button
                android:id="@+id/buttonNine"
                android:layout_width="95dp"
                android:layout_height="95dp"
                android:background="@drawable/btn_rounded_sm"
                android:text="@string/nine"
                android:textSize="24sp"
                android:textColor="@color/customText"
                android:layout_row="1"
                android:layout_column="2"
                android:layout_margin="3dp">
            </Button>

            <Button
                android:id="@+id/buttonDivide"
                android:layout_width="95dp"
                android:layout_height="95dp"
                android:background="@drawable/btn_rounded_sm"
                android:text="@string/divide"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="@color/customAccent"
                android:layout_row="1"
                android:layout_column="3"
                android:layout_margin="3dp">
            </Button>

            <Button
                android:id="@+id/buttonFour"
                android:layout_width="95dp"
                android:layout_height="95dp"
                android:background="@drawable/btn_rounded_sm"
                android:text="@string/four"
                android:textColor="@color/customText"
                android:textSize="24sp"
                android:layout_row="2"
                android:layout_column="0"
                android:layout_margin="3dp">
            </Button>

            <Button
                android:id="@+id/buttonFive"
                android:layout_width="95dp"
                android:layout_height="95dp"
                android:background="@drawable/btn_rounded_sm"
                android:text="@string/five"
                android:textSize="24sp"
                android:textColor="@color/customText"
                android:layout_row="2"
                android:layout_column="1"
                android:layout_margin="3dp">
            </Button>

            <Button
                android:id="@+id/buttonSix"
                android:layout_width="95dp"
                android:layout_height="95dp"
                android:background="@drawable/btn_rounded_sm"
                android:text="@string/six"
                android:textSize="24sp"
                android:textColor="@color/customText"
                android:layout_row="2"
                android:layout_column="2"
                android:layout_margin="3dp">
            </Button>

            <Button
                android:id="@+id/buttonSubtract"
                android:layout_width="95dp"
                android:layout_height="95dp"
                android:background="@drawable/btn_rounded_sm"
                android:text="@string/minus"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="@color/customAccent"
                android:layout_row="2"
                android:layout_column="3"
                android:layout_margin="3dp">
            </Button>

            <Button
                android:id="@+id/buttonOne"
                android:layout_width="95dp"
                android:layout_height="95dp"
                android:background="@drawable/btn_rounded_sm"
                android:text="@string/one"
                android:textColor="@color/customText"
                android:textSize="24sp"
                android:layout_row="3"
                android:layout_column="0"
                android:layout_margin="3dp">
            </Button>

            <Button
                android:id="@+id/buttonTwo"
                android:layout_width="95dp"
                android:layout_height="95dp"
                android:background="@drawable/btn_rounded_sm"
                android:text="@string/two"
                android:textSize="24sp"
                android:textColor="@color/customText"
                android:layout_row="3"
                android:layout_column="1"
                android:layout_margin="3dp">
            </Button>

            <Button
                android:id="@+id/buttonThree"
                android:layout_width="95dp"
                android:layout_height="95dp"
                android:background="@drawable/btn_rounded_sm"
                android:text="@string/three"
                android:textSize="24sp"
                android:textColor="@color/customText"
                android:layout_row="3"
                android:layout_column="2"
                android:layout_margin="3dp">
            </Button>

            <Button
                android:id="@+id/buttonAdd"
                android:layout_width="95dp"
                android:layout_height="95dp"
                android:background="@drawable/btn_rounded_sm"
                android:text="@string/add"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="@color/customAccent"
                android:layout_row="3"
                android:layout_column="3"
                android:layout_margin="3dp">
            </Button>

            <Button
                android:id="@+id/buttonClear"
                android:layout_width="95dp"
                android:layout_height="95dp"
                android:background="@drawable/btn_rounded_sm"
                android:backgroundTint="@android:color/black"
                android:text="@string/clear"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="@color/customAccent"
                android:layout_row="4"
                android:layout_column="0"
                android:layout_margin="3dp">
            </Button>

            <Button
                android:id="@+id/buttonZero"
                android:layout_width="95dp"
                android:layout_height="95dp"
                android:background="@drawable/btn_rounded_sm"
                android:text="@string/zero"
                android:textSize="24sp"
                android:textColor="@color/customText"
                android:layout_row="4"
                android:layout_column="1"
                android:layout_margin="3dp"
                android:layout_marginBottom="7dp">
            </Button>

            <Button
                android:id="@+id/buttonDot"
                android:layout_width="95dp"
                android:layout_height="95dp"
                android:background="@drawable/btn_rounded_sm"
                android:text="@string/dot"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="@color/customAccent"
                android:layout_row="4"
                android:layout_column="2"
                android:layout_margin="3dp"
                android:layout_marginBottom="7dp">
            </Button>

            <Button
                android:id="@+id/buttonEquals"
                android:layout_width="95dp"
                android:layout_height="95dp"
                android:background="@drawable/btn_rounded_sm"
                android:backgroundTint="@color/green"
                android:text="@string/equals"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="@color/customAccent"
                android:layout_row="4"
                android:layout_column="3"
                android:layout_margin="3dp"
                android:layout_marginBottom="7dp">
            </Button>

        </GridLayout>

</RelativeLayout>
