<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_image"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@color/customAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.623">
    </TextView>

    <TextView
        android:id="@+id/aboutButton"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:background="@drawable/information_icon"
        android:backgroundTint="@color/customPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.628">
    </TextView>

    <Button
        android:id="@+id/ratesButton"
        android:layout_width="150dp"
        android:layout_height="65dp"
        android:background="@drawable/btn_rounded"
        android:text="@string/rates"
        android:textSize="22sp"
        android:textAllCaps="false"
        android:textColor="@color/customAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.785" />

    <Button
        android:id="@+id/calculatorButton"
        android:layout_width="150dp"
        android:layout_height="65dp"
        android:background="@drawable/btn_rounded"
        android:text="@string/calculator"
        android:textSize="22sp"
        android:textAllCaps="false"
        android:textColor="@color/customAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.126"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.94" />

    <Button
        android:id="@+id/converterButton"
        android:layout_width="150dp"
        android:layout_height="65dp"
        android:background="@drawable/btn_rounded"
        android:text="@string/converter"
        android:textSize="22sp"
        android:textAllCaps="false"
        android:textColor="@color/customAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.862"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.94" />

</androidx.constraintlayout.widget.ConstraintLayout>